# edf-forecasting

./: .env  .gitignore  README.md  docker-compose.yml  installation.md  pyproject.toml  requirements-api.txt  requirements-mlflow.txt  requirements-monitoring.txt  start-mlflow.sh
.github/workflows/: ci.yml
app/api/: Dockerfile
app/k8s/: cron-job-alert.yml  cronjob-alert.yaml
app/mlflow/: Dockerfile
app/monitoring/: Dockerfile
app/prometheus/: prometheus.yml
conf/base/: catalog.yml  mlflow.yml  parameters_create_reference_data.yml  parameters_fetch_raw_data.yml  parameters_hello_mlflow.yml  parameters_prepare_data.yml  parameters_prepare_data_30min.yml  parameters_process_data.yml  parameters_train_xgboost_30min.yml  parameters_train_xgboost_tabular.yml  parameters_train_xgboost_time_series.yml  parameters_tune_xgboost_30min.yml  parameters_tune_xgboost_tabular.yml  parameters_tune_xgboost_time_series.yml
doc/: archi.md  notes.md
mlflow-server/: start-mlflow.sh
mlflow-server/mlflow-data/: mlflow.db
scripts/: retrain.sh  start_mlflow.sh
src/: evaluate_model.py
src/edf_forecasting/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/edf_forecasting/components/: eco2mix_add_features.py  eco2mix_calibrate_xgboost_tabular_30min.py  eco2mix_evaluate_xgboost_tabular_30min.py  eco2mix_tune_gboost_day.py  (+5 more)
src/edf_forecasting_api/: create_reference_data.py  evaluate_model.py  logger_utils.py  main.py  metrics_viewer.py  ml_monitoring.py  model_manager.py  model_utils.py  old_versions.py  run_monitoring.py  schema.py
src/logs/: predictions.jsonl
src/monitoring/: check_metrics.py  metrics_storage.py  metrics_viewer.py  ml_monitoring.py  run_monitoring.py
tests/: _test_conn_minio_mlflow.py  _test_log_minio_model.py  artifact_test.txt  test_run.py
tests/integrations/: api.py  lifespan_orchestration.py  monitoring.py  test_api.py  test_lifespan_orchestration.py  test_manager_model.py  test_monitoring.py
tests/nodes/: create_reference_data.py  test_fetch_raw_data.py  test_process_data.py
(+49 files in other folders)
